--- a/signin.html
+++ b/signin.html
@@ -15,5 +15,6 @@
         <button type="submit">Submit</button>
         <button type="reset">Reset</button>
     </form>
+    <a href="signup.html">Don't have an account? Register here<>
 </body>
 </html>
