--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,7 @@
 			<input type="submit" name="submit" value="Submit" />
 			<input type="reset" name="reset" value="Reset" />
 		</form>
-		<a href="">Already have an account?</a>
+		<a href="signin.html">Already have an account?</a>
 </body>
 </html>
 
